--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -7,11 +7,16 @@ body {
 h1, h2, h3, h4, h5, h6 {
 	font-family: 'Dosis', sans-serif;
 	text-transform: uppercase;
+	font-weight: 400;
 }
 h2 {
 		font-size: 18px;
-    font-weight: 400;
 		letter-spacing: 5px;
+		text-align: center;
+}
+h3 {
+  letter-spacing: 3px;
+  font-size: 16px;
 }
 p {
 	font-family: 'Open Sans', sans-serif;
@@ -19,6 +24,16 @@ p {
 	font-weight: 300;
 	font-size: 18px;
   line-height: 27px;
+}
+.sub-head {
+	text-align: center
+}
+.sub-head.mb-75 {
+	margin-bottom : 75px;
+}
+.full-height-width {
+	width: 100%;
+	height: 100%;
 }
 
 .container {
@@ -31,6 +46,16 @@ p {
 		padding : 0 25px;
 	}
 	}
+
+.page-separator {
+	border-top: 1px solid rgb(217, 217, 217);
+}
+
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
 
 /*------------------------*/
 /* HERO SECTION */
@@ -130,15 +155,105 @@ p {
 /* ABOUT ME SECTION */
 /*------------------------*/
 .about {
-	margin: 100px 0;
+	margin: 150px 0;
 }
-.about .about__image {}
-@media (max-width: 750px) {
-	.about .about__image {
-		display : none;
-	}
-		}
+.about .about__content {
+	text-align: center;
+}
+.about img {
+	border-radius: 50%;
+	margin: 24px 0 14px;
+}
 
 /*------------------------*/
 /* PORTFOLIO SECTION */
 /*------------------------*/
+.portfolio {
+	margin: 150px 0;
+}
+.portfolio .portfolio__showcase-image {
+	width: 60%;
+	float: left;
+}
+.portfolio .portfolio__showcase-image img {
+	width: 100%;
+}
+.portfolio .portfolio__showcase-description {
+	float: right;
+	width: 38%;
+}
+.portfolio .portfolio__showcase-description ul {
+	display: -ms-inline-flexbox;
+	display: inline-flex;
+	list-style: none;
+	padding-left: 0;
+}
+.portfolio .portfolio__showcase-description ul li {
+	padding: 3px 6px;
+	background-color: #1cbbb4;
+	border-radius: 2px;
+	font-size: 10px;
+	color: #fff;
+	text-transform: uppercase;
+	box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12)
+}
+.portfolio .portfolio__showcase-description ul li + li {
+	margin-left : 5px;
+}
+.portfolio .portfolio__showcase-separator {
+	margin: 75px auto;
+	width: 50%;
+	border: 0;
+	height: 1px;
+	background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgb(217, 217, 217), rgba(0, 0, 0, 0));
+}
+.portfolio .fa-tags {
+	vertical-align: middle;
+}
+.portfolio .web-apps {
+	margin: 75px 0;
+}
+/* web apps portion of portfolio */
+.web-apps__showcase {
+	list-style: none;
+	width: 100%;
+	margin: 0;
+	padding: 0;
+}
+.web-apps__showcase li {
+	width: 50%;
+	float: left;
+	position: relative;
+	cursor: pointer;
+	overflow: hidden;
+	transition:all 0.5s ease-in-out
+}
+.web-apps__showcase li:hover .caption {
+	opacity : 1;
+	z-index : 1;
+}
+.web-apps__showcase li:hover img {
+	transform : scale(1.1);
+}
+.web-apps__showcase img {
+	width: 100%;
+	vertical-align: top;
+	transition:all 0.5s ease-in-out;
+}
+.web-apps__showcase .caption {
+	position: absolute;
+	top: 0;
+	opacity: 0;
+	transition:all 0.5s ease-in-out;
+}
+.web-apps__showcase .blur {/* adds black overlay on hover when image is hovered. Effect is triggers by opacity: 1 on the li  */
+	position: absolute;
+	background-color: rgba(0,0,0,0.8);
+}
+.web-apps__showcase .caption-text {
+	position: absolute;
+	text-align: center;
+}
+.web-apps__showcase h2, .web-apps__showcase p {
+	color: #ffffff;
+}
