--- a/resource/scss/style.css
+++ b/resource/scss/style.css
@@ -12,11 +12,16 @@ h5,
 h6 {
 	font-family: 'Dosis', sans-serif;
 	text-transform: uppercase;
+	font-weight: 400;
 }
 h2 {
 		font-size: 18px;
-    font-weight: 400;
 		letter-spacing: 5px;
+		text-align: center;
+}
+h3 {
+  letter-spacing: 3px;
+  font-size: 16px;
 }
 p {
 	font-family: 'Open Sans', sans-serif;
@@ -25,6 +30,16 @@ p {
 	font-size: 18px;
   line-height: 27px;
 }
+.sub-head {
+	text-align: center;
+	&.mb-75 {
+		margin-bottom: 75px;
+	}
+}
+.full-height-width {
+	width: 100%;
+	height: 100%;
+}
 
 .container {
 	max-width: 1024px;
@@ -32,6 +47,16 @@ p {
 	@media (max-width: 1050px) {
 		padding: 0 25px;
 	}
+}
+
+.page-separator {
+	border-top: 1px solid rgb(217, 217, 217);
+}
+
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
 /*------------------------*/
@@ -114,14 +139,106 @@ p {
 /* ABOUT ME SECTION */
 /*------------------------*/
 .about {
-	margin: 100px 0;
-	.about__image {
-		@media (max-width: 750px) {
-			display: none;
-		}
+	margin: 150px 0;
+	.about__content {
+		text-align: center;
+	}
+	img {
+		border-radius: 50%;
+		margin: 24px 0 14px;
 	}
 }
 
 /*------------------------*/
 /* PORTFOLIO SECTION */
 /*------------------------*/
+.portfolio {
+	margin: 150px 0;
+	.portfolio__showcase-image {
+		width: 60%;
+		float: left;
+		img {
+			width: 100%;
+		}
+	}
+	.portfolio__showcase-description {
+		float: right;
+    width: 38%;
+		ul {
+			display: inline-flex;
+			list-style: none;
+			padding-left: 0;
+			li {
+				padding: 3px 6px;
+				background-color: #1cbbb4;
+				border-radius: 2px;
+				font-size: 10px;
+				color: #fff;
+				text-transform: uppercase;
+				box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+				& + li {
+					margin-left: 5px;
+				}
+			}
+		}
+	}
+	.portfolio__showcase-separator {
+		margin: 75px auto;
+    width: 50%;
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgb(217, 217, 217), rgba(0, 0, 0, 0));
+	}
+	.fa-tags {
+		vertical-align: middle;
+	}
+	.web-apps {
+		margin: 75px 0;
+	}
+}
+/* web apps portion of portfolio */
+.web-apps__showcase {
+	list-style: none;
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	li {
+		width: 50%;
+		float: left;
+		position: relative;
+		cursor: pointer;
+		overflow: hidden;
+		transition:all 0.5s ease-in-out;
+		&:hover {
+			.caption {
+				opacity: 1;
+				z-index: 1;
+			}
+			img {
+				transform: scale(1.1);
+			}
+		}
+	}
+	img {
+		width: 100%;
+		vertical-align: top;
+		transition:all 0.5s ease-in-out;
+	}
+	.caption {
+		position: absolute;
+		top: 0;
+		opacity: 0;
+		transition:all 0.5s ease-in-out;
+	}
+	.blur { /* adds black overlay on hover when image is hovered. Effect is triggers by opacity: 1 on the li  */
+		position: absolute;
+		background-color: rgba(0,0,0,0.8);
+	}
+	.caption-text {
+		position: absolute;
+		text-align: center;
+	}
+	h2, p {
+		color: #ffffff;
+	}
+}
