--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -25,11 +25,17 @@ p {
 	font-size: 18px;
   line-height: 27px;
 }
+section {
+	margin: 150px 0;
+}
 .sub-head {
 	text-align: center
 }
 .sub-head.mb-75 {
 	margin-bottom : 75px;
+}
+.sub-head.mb-75.mb-35 {
+	margin-bottom : 35px;
 }
 .full-height-width {
 	width: 100%;
@@ -67,6 +73,7 @@ p {
 	background-attachment: fixed;
 	width: 100%;
 	height: 100vh;
+	margin-top: 0;
 }
 .hero ul {
 	display: -ms-flexbox;
@@ -154,9 +161,6 @@ p {
 /*------------------------*/
 /* ABOUT ME SECTION */
 /*------------------------*/
-.about {
-	margin: 150px 0;
-}
 .about .about__content {
 	text-align: center;
 }
@@ -168,9 +172,6 @@ p {
 /*------------------------*/
 /* PORTFOLIO SECTION */
 /*------------------------*/
-.portfolio {
-	margin: 150px 0;
-}
 .portfolio .portfolio__showcase-image {
 	width: 60%;
 	float: left;
@@ -256,4 +257,73 @@ p {
 }
 .web-apps__showcase h2, .web-apps__showcase p {
 	color: #ffffff;
+}
+/*------------------------*/
+/* CONTACT SECTION */
+/*------------------------*/
+.contact {
+	width: 100%;
+	background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../images/wood.jpg");
+	background-position: center;
+	background-size: cover;
+	background-attachment: fixed;
+	color: #fff;
+	margin-bottom: 35px;
+}
+.contact .contact__content {
+	padding: 50px 0;
+}
+.contact h2 {
+	margin-top: 0;
+}
+.contact p {
+	color: rgba(255, 255, 255, 0.6);
+}
+.contact .button {
+	width: 140px;
+	padding: 10px 0;
+	margin: 0 auto;
+	border-radius: 3px;
+	text-align: center;
+	background-color: #87D37C;
+}
+.contact .button a {
+	color: #000;
+	text-decoration: none;
+	text-transform: uppercase;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 300;
+	font-size: 14px;
+}
+/*------------------------*/
+/* FOOTER SECTION */
+/*------------------------*/
+footer .footer__social {
+	display: -ms-flexbox;
+	display: flex;
+	-ms-flex-pack: center;
+	    justify-content: center;
+}
+footer ul {
+	display: -ms-flexbox;
+	display: flex;
+	list-style: none;
+	padding: 0;
+}
+footer ul li+li {
+	margin-left: 30px;
+}
+footer i {
+	color: #000
+}
+footer i.fa-linkedin:hover {
+	color : #007bb6;
+}
+footer i.fa-twitter:hover {
+	color : #00b6f1;
+}
+footer .copy-right {
+	text-align: center;
+	margin-bottom: 0;
+	font-size: 10px;
 }
