--- a/resource/scss/style.css
+++ b/resource/scss/style.css
@@ -32,6 +32,9 @@ p {
 }
 section {
 	margin: 150px 0;
+	@media (max-width: 600px) {
+		margin: 75px 0;
+	}
 }
 .sub-head {
 	text-align: center;
@@ -51,7 +54,7 @@ section {
 	max-width: 1024px;
 	margin: 0 auto;
 	@media (max-width: 1050px) {
-		padding: 0 25px;
+		padding: 0 15px;
 	}
 }
 
@@ -162,6 +165,10 @@ section {
 	.portfolio__showcase-image {
 		width: 60%;
 		float: left;
+		@media (max-width: 1023px) {
+			width: 100%;
+			float: none;
+		}
 		img {
 			width: 100%;
 		}
@@ -169,10 +176,17 @@ section {
 	.portfolio__showcase-description {
 		float: right;
     width: 38%;
+		@media (max-width: 1023px) {
+			width: 100%;
+			float: none;
+		}
 		ul {
 			display: inline-flex;
 			list-style: none;
 			padding-left: 0;
+			@media (max-width: 1023px) {
+				margin: 0;
+			}
 			li {
 				padding: 3px 6px;
 				background-color: #1cbbb4;
@@ -193,6 +207,10 @@ section {
     border: 0;
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgb(217, 217, 217), rgba(0, 0, 0, 0));
+		@media (max-width: 480px) {
+			margin: 40px auto;
+			width: 80%;
+		}
 	}
 	.fa-tags {
 		vertical-align: middle;
@@ -214,6 +232,10 @@ section {
 		cursor: pointer;
 		overflow: hidden;
 		transition:all 0.5s ease-in-out;
+		@media (max-width: 950px) {
+			width: 100%;
+			float: none;
+		}
 		&:hover {
 			.caption {
 				opacity: 1;
@@ -242,10 +264,25 @@ section {
 	.caption-text {
 		position: absolute;
 		text-align: center;
+		p {
+	    padding: 0 30px;
+			color: #fff;
+			@media (max-width: 480px) {
+				font-size: 15px;
+				line-height: 20px;
+			}
+		}
+		h2 {
+			margin-top: 65px;
+			color: #fff;
+			@media (max-width: 480px) {
+				margin-top: 35px;
+			}
+		}
 	}
-	h2, p {
+	/*h2, p {
 		color: #ffffff;
-	}
+	}*/
 }
 /*------------------------*/
 /* CONTACT SECTION */
@@ -273,9 +310,9 @@ section {
     margin: 0 auto;
     border-radius: 3px;
     text-align: center;
-    background-color: #87D37C;
+    background-color: #1cbbb4;
 		a {
-			color: #000;
+			color: #fff;
 			text-decoration: none;
 			text-transform: uppercase;
 			font-family: 'Open Sans', sans-serif;
