add family kitchen to portfolio section

--- a/resource/scss/style.css
+++ b/resource/scss/style.css
@@ -184,9 +184,10 @@ section {
 			display: inline-flex;
 			list-style: none;
 			padding-left: 0;
-			@media (max-width: 1023px) {
+			margin: 0;
+			/*@media (max-width: 1023px) {
 				margin: 0;
-			}
+			}*/
 			li {
 				padding: 3px 6px;
 				background-color: #1cbbb4;
