--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -193,7 +193,11 @@ section {
 	display: inline-flex;
 	list-style: none;
 	padding-left: 0;
+	margin: 0;
 }
+/*@media (max-width: 1023px) {
+				margin: 0;
+			}*/
 .portfolio .portfolio__showcase-description ul li {
 	padding: 3px 6px;
 	background-color: #1cbbb4;
@@ -231,11 +235,6 @@ section {
 		float : none;
 	}
 		}
-@media (max-width: 1023px) {
-	.portfolio .portfolio__showcase-description ul {
-		margin : 0;
-	}
-			}
 @media (max-width: 480px) {
 	.portfolio .portfolio__showcase-separator {
 		margin : 40px auto;
