--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -92,8 +92,8 @@ section {
 /*------------------------*/
 .hero {
 	background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/bg-hero-img.jpg");
+	background-size: cover;
 	background-position: center;
-  background-size: cover;
 	background-attachment: fixed;
 	width: 100%;
 	height: 100vh;
@@ -148,6 +148,22 @@ section {
 	font-size: 20px;
 	color: rgba(255, 255, 255, .8)
 }
+@media (max-width: 568px) {
+	.hero {
+		background-attachment : scroll;/* IOS fix to display background */
+	}
+	}
+@media (max-width: 568px) {
+	.hero ul {
+		-ms-flex-pack : distribute;
+		    justify-content : space-around;
+	}
+		}
+@media (max-width: 568px) {
+	.hero ul li {
+		padding-right : 0;
+	}
+			}
 @media (max-width: 1000px) {
 	.hero .hero__text h1 {
 		letter-spacing : 30px;
