--- a/resource/scss/style.css
+++ b/resource/scss/style.css
@@ -92,12 +92,15 @@ section {
 /*------------------------*/
 .hero {
 	background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/bg-hero-img.jpg");
+	background-size: cover;
 	background-position: center;
-  background-size: cover;
 	background-attachment: fixed;
 	width: 100%;
 	height: 100vh;
 	margin-top: 0;
+	@media (max-width: 568px) {
+		background-attachment: scroll;  /* IOS fix to display background */
+	}
 	ul {
 		display: flex;
     flex-direction: row;
@@ -106,11 +109,17 @@ section {
     padding: 20px 0;
     list-style: none;
 		font-size: 11px;
+		@media (max-width: 568px) {
+			justify-content: space-around;
+		}
 		li {
 			text-transform: uppercase;
 			padding-right: 25px;
 			letter-spacing: 2px;
 			color: rgba(255, 255, 255, .8);
+			@media (max-width: 568px) {
+				padding-right: 0;
+			}
 			a {
 				color: rgba(255, 255, 255, .8);
 				text-decoration: none;
