--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -1,8 +1,8 @@
 /*------------------------*/
 /* GLOBAL STYLES */
 /*------------------------*/
-  // body {
-	overflow: hidden;
+   body {
+	// overflow: hidden;
 }
 h1, h2, h3, h4, h5, h6 {
 	font-family: 'Dosis', sans-serif;
