--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -126,7 +126,7 @@ section {
 .hero ul li a:hover {
 	border-bottom : 1px solid #f44336;
 }
-.hero .hero__text {
+.hero .hero-text {
 	height: 100%;
 	display: -ms-flexbox;
 	display: flex;
@@ -137,13 +137,13 @@ section {
 	-ms-flex-direction: column;
 	    flex-direction: column;
 }
-.hero .hero__text h1 {
+.hero .hero-text h1 {
 	font-size: 36px;
 	font-weight: 400;
 	letter-spacing: 35px;
 	color: #fff
 }
-.hero .hero__text p {
+.hero .hero-text p {
 	letter-spacing: 6px;
 	font-size: 20px;
 	color: rgba(255, 255, 255, .8)
@@ -165,35 +165,35 @@ section {
 	}
 			}
 @media (max-width: 1000px) {
-	.hero .hero__text h1 {
+	.hero .hero-text h1 {
 		letter-spacing : 30px;
 	}
 			}
 @media (max-width: 900px) {
-	.hero .hero__text h1 {
+	.hero .hero-text h1 {
 		letter-spacing : 25px;
 	}
 			}
 @media (max-width: 805px) {
-	.hero .hero__text h1 {
+	.hero .hero-text h1 {
 		font-size : 30px;
 		letter-spacing : 20px;
 	}
 			}
 @media (max-width: 670px) {
-	.hero .hero__text h1 {
+	.hero .hero-text h1 {
 		font-size : 25px;
 		letter-spacing : 15px;
 	}
 			}
 @media (max-width: 500px) {
-	.hero .hero__text h1 {
+	.hero .hero-text h1 {
 		font-size : 22px;
 		letter-spacing : 10px;
 	}
 			}
 @media (max-width: 645px) {
-	.hero .hero__text p {
+	.hero .hero-text p {
 		font-size : 16px;
 	}
 			}
@@ -201,7 +201,7 @@ section {
 /*------------------------*/
 /* ABOUT ME SECTION */
 /*------------------------*/
-.about .about__content {
+.about .about-content {
 	text-align: center;
 }
 .about img {
@@ -212,18 +212,18 @@ section {
 /*------------------------*/
 /* PORTFOLIO SECTION */
 /*------------------------*/
-.portfolio .portfolio__showcase-image {
+.portfolio .portfolio-showcase__image {
 	width: 60%;
 	float: left;
 }
-.portfolio .portfolio__showcase-image img {
+.portfolio .portfolio-showcase__image img {
 	width: 100%;
 }
-.portfolio .portfolio__showcase-description {
+.portfolio .portfolio-showcase__description {
 	float: right;
 	width: 38%;
 }
-.portfolio .portfolio__showcase-description ul {
+.portfolio .portfolio-showcase__description ul {
 	display: -ms-inline-flexbox;
 	display: inline-flex;
 	list-style: none;
@@ -233,7 +233,7 @@ section {
 /*@media (max-width: 1023px) {
 				margin: 0;
 			}*/
-.portfolio .portfolio__showcase-description ul li {
+.portfolio .portfolio-showcase__description ul li {
 	padding: 3px 6px;
 	background-color: #1cbbb4;
 	border-radius: 2px;
@@ -242,10 +242,10 @@ section {
 	text-transform: uppercase;
 	box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12)
 }
-.portfolio .portfolio__showcase-description ul li + li {
+.portfolio .portfolio-showcase__description ul li + li {
 	margin-left : 5px;
 }
-.portfolio .portfolio__showcase-separator {
+.portfolio .portfolio-showcase__separator {
 	margin: 75px auto;
 	width: 50%;
 	border: 0;
@@ -259,19 +259,19 @@ section {
 	margin: 75px 0;
 }
 @media (max-width: 1023px) {
-	.portfolio .portfolio__showcase-image {
+	.portfolio .portfolio-showcase__image {
 		width : 100%;
 		float : none;
 	}
 		}
 @media (max-width: 1023px) {
-	.portfolio .portfolio__showcase-description {
+	.portfolio .portfolio-showcase__description {
 		width : 100%;
 		float : none;
 	}
 		}
 @media (max-width: 480px) {
-	.portfolio .portfolio__showcase-separator {
+	.portfolio .portfolio-showcase__separator {
 		margin : 40px auto;
 		width : 80%;
 	}
