--- a/resource/scss/style.css
+++ b/resource/scss/style.css
@@ -4,6 +4,7 @@
 body {
 	// overflow: hidden;
 }
+
 h1,
 h2,
 h3,
@@ -14,15 +15,18 @@ h6 {
 	text-transform: uppercase;
 	font-weight: 400;
 }
+
 h2 {
 		font-size: 18px;
 		letter-spacing: 5px;
 		text-align: center;
 }
+
 h3 {
   letter-spacing: 3px;
   font-size: 16px;
 }
+
 p {
 	font-family: 'Open Sans', sans-serif;
 	color: #777;
@@ -30,12 +34,14 @@ p {
 	font-size: 18px;
   line-height: 27px;
 }
+
 section {
 	margin: 150px 0;
 	@media (max-width: 600px) {
 		margin: 75px 0;
 	}
 }
+
 .sub-head {
 	text-align: center;
 	&.mb-75 {
@@ -45,6 +51,7 @@ section {
 	}
 	}
 }
+
 .full-height-width {
 	width: 100%;
 	height: 100%;
@@ -75,7 +82,7 @@ section {
 	left: 0;
 	z-index: 2;
 	background-color: rgba(0, 0, 0, 0.8);
-    box-shadow: 0 2px 5px #000;
+  box-shadow: 0 2px 5px #000;
 }
 
 /* offset trick to avoid hashtag links to end up behind fixed nav bar */
@@ -213,9 +220,6 @@ section {
 			list-style: none;
 			padding-left: 0;
 			margin: 0;
-			/*@media (max-width: 1023px) {
-				margin: 0;
-			}*/
 			li {
 				padding: 3px 6px;
 				background-color: #1cbbb4;
@@ -261,7 +265,7 @@ section {
 		cursor: pointer;
 		overflow: hidden;
 		transition:all 0.5s ease-in-out;
-		@media (max-width: 950px) {
+		@media (max-width: 700px) {
 			width: 100%;
 			float: none;
 		}
@@ -293,6 +297,10 @@ section {
 	.caption-text {
 		position: absolute;
 		text-align: center;
+		display: flex;
+    align-items: center;
+    justify-content: center;
+		flex-direction: column;
 		p {
 	    padding: 0 30px;
 			color: #fff;
@@ -302,16 +310,9 @@ section {
 			}
 		}
 		h2 {
-			margin-top: 65px;
 			color: #fff;
-			@media (max-width: 480px) {
-				margin-top: 35px;
-			}
 		}
 	}
-	/*h2, p {
-		color: #ffffff;
-	}*/
 }
 /*------------------------*/
 /* CONTACT SECTION */
