update contact me and footer styles for new design

--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -378,12 +378,14 @@ section {
 /*------------------------*/
 .contact {
 	width: 100%;
-	background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/wood.jpeg");
-	background-position: center;
-	background-size: cover;
-	background-attachment: fixed;
+	// background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/wood.jpeg");
+	// background-position: center;
+	// background-size: cover;
+	// background-attachment: fixed;
+	background-color: #252525;
 	color: #fff;
-	margin-bottom: 35px;
+	margin-bottom: 0;
+	border-bottom: 1px solid rgba(255,255,255,0.1);
 }
 .contact .contact__content {
 	padding: 50px 0;
@@ -413,11 +415,16 @@ section {
 /*------------------------*/
 /* FOOTER SECTION */
 /*------------------------*/
+footer {
+	background-color: #252525;
+	padding: 20px 0 30px 0;
+}
 footer .footer__social {
 	display: -ms-flexbox;
 	display: flex;
 	-ms-flex-pack: center;
 	    justify-content: center;
+	background-color: #252525;
 }
 footer ul {
 	display: -ms-flexbox;
@@ -429,7 +436,8 @@ footer ul li+li {
 	margin-left: 30px;
 }
 footer i {
-	color: #000
+	color: #777;
+	transition: all 0.3s
 }
 footer i.fa-linkedin:hover {
 	color : #007bb6;
