add react weather app

--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -343,6 +343,9 @@ section {
 .web-apps__showcase .blur.brown {
 	background-color : rgba(126, 113, 78, 0.6);
 }
+.web-apps__showcase .blur.blue {
+	background-color : rgba(140, 184, 255, 0.8);
+}
 .web-apps__showcase .caption-text {
 	position: absolute;
 	text-align: center;
