--- a/resource/scss/style.css
+++ b/resource/scss/style.css
@@ -303,6 +303,7 @@ section {
 		&.black { background-color: rgba(28, 21, 17, 0.6); }
 		&.brown { background-color: rgba(126, 113, 78, 0.6); }
 		&.blue { background-color: rgba(140, 184, 255, 0.8); }
+		&.dark-blue { background-color: rgba(14, 63, 142, 0.8); }
 	}
 	.caption-text {
 		position: absolute;
