--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -349,6 +349,9 @@ section {
 .web-apps__showcase .blur.dark-blue {
 	background-color : rgba(14, 63, 142, 0.8);
 }
+.web-apps__showcase .blur.purple {
+	background-color : rgba(129, 25, 226, 0.8);
+}
 .web-apps__showcase .caption-text {
 	position: absolute;
 	text-align: center;
